fix: app menu justification mobile

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -113,6 +113,7 @@ a {
   }
 }
 
-.p-menubar .p-menubar-root-list {
+.p-menubar .p-menubar-root-list,
+.p-menubar .p-menubar-button {
   margin-left: auto;
 }
